# lab-02-cache

./: CMakeLists.txt  README.md
include/: analytics.hpp  experiment.hpp
sources/: analytics.cpp  experiment.cpp  lab2.cpp
tests/: test.cpp
